--- a/MinhHieuShop.Web/ConnectionStrings.config
+++ b/MinhHieuShop.Web/ConnectionStrings.config
@@ -1,4 +1,4 @@
 ﻿<connectionStrings>
   <clear/>
-  <add name="MinhHieuShopConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=MinhHieuShop;Integrated Security=False;User Id=sa;Password=183461;MultipleActiveResultSets=True"/>
+  <add name="MinhHieuShopConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=MinhHieuShopConnection;Integrated Security=False;User Id=sa;Password=183461;MultipleActiveResultSets=True"/>
 </connectionStrings>
